# sensehat-snowflake-streaming

./: .gitignore  ARCHITECTURE.md  README.md  arch.md  deploy_to_pi.sh  documentation.md  example.py  generate_keys.sh  main.py  pyproject.toml  requirements.txt  run.sh  sensehat_sensor.py  sensehat_streaming_client.py  setup_snowflake.sql  snowflake_config.json.template  snowflake_jwt_auth.py  test.sh
tests/: __init__.py  test_connection.py  test_sensors.py  test_streaming.py
